Add page template and add to NuGet package.

--- a/xamu-templates.nuspec
+++ b/xamu-templates.nuspec
@@ -2,13 +2,13 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>XamarinUniversity.ContentTemplates</id>
-    <version>0.4.0</version>
+    <version>0.5.6</version>
     <authors>Adam Patridge</authors>
     <licenseUrl>https://github.com/XamarinUniversity/ContentTemplates/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/XamarinUniversity/ContentTemplates</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Templates for creating course content for Xamarin University's self-guided learning portal</description>
-    <releaseNotes>Course template added.</releaseNotes>
+    <releaseNotes>Added page template.</releaseNotes>
     <copyright>© 2018 Microsoft</copyright>
     <tags>XamarinUniversity template</tags>
     <packageTypes>
@@ -19,5 +19,6 @@
     <file src=".\course\**" target="content\course" exclude=""/>
     <file src=".\objective\**" target="content\objective" exclude=""/>
     <file src=".\exercise\**" target="content\exercise" exclude=""/>
+    <file src=".\page\**" target="content\page" exclude=""/>
   </files>
 </package>
