Help prevent uncommenting of YAML leaving bad YAML whitespace.

--- a/xamu-templates.nuspec
+++ b/xamu-templates.nuspec
@@ -2,13 +2,19 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>XamarinUniversity.ContentTemplates</id>
-    <version>0.7.5</version>
+    <version>0.7.6</version>
     <authors>Adam Patridge</authors>
     <licenseUrl>https://github.com/XamarinUniversity/ContentTemplates/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/XamarinUniversity/ContentTemplates</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Templates for creating course content for Xamarin University's self-guided learning portal</description>
-    <releaseNotes>Added page template (page variable fixed in 0.7.5).</releaseNotes>
+    <releaseNotes>
+<![CDATA[
+0.7.6: [Fix] Less potential for YAML uncommenting to leave broken whitespace.
+0.7.5: [Fix] xamu-page: renaming file appropriately via page parameter now.
+0.7.4: Added page template.
+]]>
+    </releaseNotes>
     <copyright>© 2018 Microsoft</copyright>
     <tags>XamarinUniversity template</tags>
     <packageTypes>
